log/build_2024-02-26_15-02-24/motor/stdout_stderr.log
running egg_info
writing ../../build/motor/motor.egg-info/PKG-INFO
writing dependency_links to ../../build/motor/motor.egg-info/dependency_links.txt
writing entry points to ../../build/motor/motor.egg-info/entry_points.txt
writing requirements to ../../build/motor/motor.egg-info/requires.txt
writing top-level names to ../../build/motor/motor.egg-info/top_level.txt
reading manifest file '../../build/motor/motor.egg-info/SOURCES.txt'
writing manifest file '../../build/motor/motor.egg-info/SOURCES.txt'
running build
running build_py
copying motor/motorpwm.py -> /home/groupl/MarcWS/build/motor/build/lib/motor
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /home/groupl/MarcWS/build/motor/build/lib/motor/motorpwm.py -> /home/groupl/MarcWS/install/motor/lib/python3.10/site-packages/motor
byte-compiling /home/groupl/MarcWS/install/motor/lib/python3.10/site-packages/motor/motorpwm.py to motorpwm.cpython-310.pyc
  File "/home/groupl/MarcWS/install/motor/lib/python3.10/site-packages/motor/motorpwm.py", line 43
    	if direction == 1 && predir == 0:
    	                   ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/groupl/MarcWS/install/motor/lib/python3.10/site-packages/motor-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/motor/motor.egg-info to /home/groupl/MarcWS/install/motor/lib/python3.10/site-packages/motor-0.0.0-py3.10.egg-info
running install_scripts
Installing motorpwm script to /home/groupl/MarcWS/install/motor/lib/motor
writing list of installed files to '/home/groupl/MarcWS/build/motor/install.log'
